Tue May 16 15:03:35 2000  Raph Levien  <raph@acm.org>

	* art_rgb_pixbuf_affine.c: Included corresponding .h file.

	* art_rgb_pixbuf_affine.h: Put recursive #includes inside
	LIBART_COMPILATION test.

	* art_gray_svp.c:
	* art_rgb_svp.c: Explicit casts for callback data. Also removed
	"render the steps into tmpbuf" comment.

	* gen_art_config.c:
	* Makefile.am:
	* configure.in: Added code to automatically generate an
	art_config.h file, to be installed in libart's include dir. This
	file defines ART_SIZEOF_{CHAR,SHORT,INT,LONG} and art_u{8,16,32}.

	* art_misc.h: Moved definition of art_u8 and art_u32 into
	art_config.h. Added GCC printf format attributes.

	* art_svp_wind.c (traverse): Fixed UMR bug here. The function
	isn't actually used, so it's just for cleanliness.

2000-04-18  Lauris Kaplinski  <lauris@ariman.ee>

	* art_affine.c (art_affine_to_string): Replaced snprinf with
	art_ftoa to avoid localisation of generated numbers

2000-04-18  ERDI Gergo  <cactus@cactus.rulez.org>

	* art_rgb_pixbuf_affine.h: Included the ArtPixBuf declaration

Fri Apr 14 16:33:55 2000  Raph Levien  <raph@acm.org>

	* art_svp_wind.c (art_svp_uncross, art_svp_rewind_uncrossed):
	Fixed uninitialized memory reads when inserting new segment into
	active_segs.

	* art_bpath.c (art_bpath_affine_transform): Made it avoid
	potential uninitialized memory reads when not all the coordinates
	are needed. Thanks to Morten Welinder for spotting both of these
	problems.

2000-04-05  Raph Levien  <raph@gimp.org>

	* art_svp_wind.c: Make "colinear" warnings go to stderr instead
	of stdout. Of course, when I finish the new intersector, these
	will go away entirely.

2000-04-04  Raph Levien  <raph@gimp.org>

	* art_uta_vpath.c (art_uta_add_line): Fixed bug that was causing
	segfaults on alphas. Thanks to msw for localizing it.

2000-01-17  Raph Levien  <raph@gimp.org>

	* art_svp_vpath_stroke.c (art_svp_vpath_stroke): Typo in api
	header (thanks rak).

2000-01-16  Timur Bakeyev  <timur@gnu.org>
