@@ -261,8 +261,10 @@ x_order (ArtPoint z0, ArtPoint z1, ArtPoint z2, ArtPoint z3)
     {
       if (d3 > 0) return -1;
       else if (d3 < 0) return 1;
+#ifdef DEBUG_raph
       else
 	fprintf (stderr, "colinear!\n");
+#endif
     }
   else /* d2 < 0 */
     {
@@ -289,8 +291,10 @@ x_order (ArtPoint z0, ArtPoint z1, ArtPoint z2, ArtPoint z3)
     {
       if (d1 > 0) return 1;
       else if (d1 < 0) return -1;
+#ifdef DEBUG_raph
       else
 	fprintf (stderr, "colinear!\n");
+#endif
     }
   else /* d0 < 0 */
     {
@@ -337,7 +341,9 @@ x_order_2 (ArtPoint z0, ArtPoint z1, ArtPoint z2, ArtPoint z3)
   if (z0.x >= z2.x && z1.x >= z2.x && z0.x >= z3.x && z1.x >= z3.x)
     return 1;
   
+#ifdef DEBUG_raph
   fprintf (stderr, "x_order_2: colinear!\n");
+#endif
   return 0;
 }
 
